@@ -139,11 +139,11 @@ if (NOT CMAKE_BUILD_TYPE)
 endif (NOT CMAKE_BUILD_TYPE)
 
 if (NOT APPLE AND NOT WIN32)
-    if (CMAKE_SIZEOF_VOID_P EQUAL 8)
+    if (USE_LIB64_FOR_HELPERS AND NOT ENABLE_KDE AND CMAKE_SIZEOF_VOID_P EQUAL 8)
         set(LINUX_LIB_DIR lib64)
-    else (CMAKE_SIZEOF_VOID_P EQUAL 8)
+    else (USE_LIB64_FOR_HELPERS AND NOT ENABLE_KDE AND CMAKE_SIZEOF_VOID_P EQUAL 8)
         set(LINUX_LIB_DIR lib)
-    endif (CMAKE_SIZEOF_VOID_P EQUAL 8)
+    endif (USE_LIB64_FOR_HELPERS AND NOT ENABLE_KDE AND CMAKE_SIZEOF_VOID_P EQUAL 8)
 endif (NOT APPLE AND NOT WIN32)
 
 if (ENABLE_UBUNTU)
